Fix text color in Home component for better visibility

--- a/src/components/page/home/Home.scss
+++ b/src/components/page/home/Home.scss
@@ -15,7 +15,7 @@
 
   h1 {
     font-size: 26px;
-    color: #ffffff79;
+    color: #fff;
   }
 }
 
